New hash_server by new software design: 	epoll replaced with blocked linux socket for accepting new connections 	hash_server_t as a template class with must be parametrized with connection tipe 	tcp_soct_t for blocked linux tcp connection 	Instead of return false or another C way it throw runtime_error
Deleted hash_server.cpp - no need anymore

Modified main.cpp:
	Read port number from command line
	try...catch for hash server

TODO: MEMORY LEAK IN connection_pool_t!!! Do not upload commit until it will be fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(hash_server LANGUAGES CXX)
 
-set(SOURCE_EXE src/main.cpp src/hash_server.cpp)
+set(SOURCE_EXE src/main.cpp)
 set(PROJ_NAME hash_server)
 
 add_executable (${PROJ_NAME} ${SOURCE_EXE})
